fix spacing

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -756,11 +756,6 @@ video {
   padding-bottom: 1rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
 .pl-2 {
   padding-left: 0.5rem;
 }
